force-app/main/default/objects/Medallia_Service_Survey__c/Medallia_Service_Survey__c.object-meta.xml
<CustomObject>
    <description>NICC-060033</description>
    <label>Medallia_Service_Survey</label>
    <nameField>
        <displayFormat>MSS-{0000}</displayFormat>
        <label>Medallia Service Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medallia_Service_Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>