force-app/main/default/objects/Medallia_Service_Survey__c/fields/Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>Assignment_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>