force-app/main/default/objects/Medallia_Service_Survey__c/fields/Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Start Date</label>
    <type>Date</type>
</CustomField>