force-app/main/default/objects/Medallia_Service_Survey__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand</label>
    <type>TextArea</type>
</CustomField>