force-app/main/default/objects/Medallia_Service_Survey__c/fields/ContactAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>