force-app/main/default/objects/Medallia_Service_Survey__c/fields/ContactCity__c.field-meta.xml
<CustomField>
    <fullName>ContactCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>