force-app/main/default/objects/Medallia_Service_Survey__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>