force-app/main/default/objects/Medallia_Service_Survey__c/fields/ContactZipCode__c.field-meta.xml
<CustomField>
    <fullName>ContactZipCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>