force-app/main/default/objects/Medallia_Service_Survey__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Project Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACPMS</fullName>
            </value>
            <value>
                <fullName>APMA</fullName>
            </value>
            <value>
                <fullName>Append</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>Custom Report</fullName>
            </value>
            <value>
                <fullName>Data Cleansing</fullName>
            </value>
            <value>
                <fullName>Design Services</fullName>
            </value>
            <value>
                <fullName>DirectBook</fullName>
            </value>
            <value>
                <fullName>Embrace</fullName>
            </value>
            <value>
                <fullName>FDC</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>HIP</fullName>
            </value>
            <value>
                <fullName>HotSOS Additional</fullName>
            </value>
            <value>
                <fullName>HotSOS - Mild</fullName>
            </value>
            <value>
                <fullName>HotSOS Standard</fullName>
            </value>
            <value>
                <fullName>HotSOS with HIP</fullName>
            </value>
            <value>
                <fullName>HotSOS with HIP/QIC</fullName>
            </value>
            <value>
                <fullName>HotSOS with QIC/REX</fullName>
            </value>
            <value>
                <fullName>HotSOS with REX</fullName>
            </value>
            <value>
                <fullName>HRM</fullName>
            </value>
            <value>
                <fullName>HSP</fullName>
            </value>
            <value>
                <fullName>IDPMS</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Mobile Rooms Coach</fullName>
            </value>
            <value>
                <fullName>New Install</fullName>
            </value>
            <value>
                <fullName>OnDemand</fullName>
            </value>
            <value>
                <fullName>Peripheral Install</fullName>
            </value>
            <value>
                <fullName>PMPro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>