force-app/main/default/objects/Medallia_Service_Survey__c/fields/Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Franchisor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Franchisor</label>
    <type>TextArea</type>
</CustomField>