force-app/main/default/objects/Medallia_Service_Survey__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Type</label>
    <type>TextArea</type>
</CustomField>