force-app/main/default/objects/Medallia_Service_Survey__c/fields/NumberOfRetries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRetries__c</fullName>
    <label>NumberOfRetries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>