force-app/main/default/objects/Medallia_Service_Survey__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>