force-app/main/default/objects/Medallia_Service_Survey__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>