force-app/main/default/objects/Medallia_Service_Survey__c/fields/Resource_Practice__c.field-meta.xml
<CustomField>
    <fullName>Resource_Practice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>