force-app/main/default/objects/Medallia_Service_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>SurveyType__c</columns>
    <columns>SurveySubType__c</columns>
    <columns>Email__c</columns>
    <columns>ProjectName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Process_Status__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Assignment_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SurveySubType__c</field>
        <operation>equals</operation>
        <value>W/Training</value>
    </filters>
    <label>All</label>
</ListView>