force-app/main/default/objects/Medallia_Service_Survey__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>Retry__c</columns>
    <columns>NAME</columns>
    <columns>SurveyType__c</columns>
    <columns>SurveySubType__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Assignment_End_Date__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Email__c</columns>
    <columns>ProjectName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Process_Status__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Resource_Practice__c</columns>
    <columns>Assignment_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>